11329 - Implement AlertReaderOS and AlertWriterOS (#11384)
* 11329 - Implement AlertReaderOS and AlertWriterOS

* 11329 - Fix code style and error wording

---------

Co-authored-by: Oleksandr Kriuchenko <oleksandr.kriuchenko-ext@camunda.com>